--- a/package.json
+++ b/package.json
@@ -1,20 +1,18 @@
 {
   "name": "rmodule",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Remote modules powered by WebRTC p2p",
   "main": "index.js",
   "repository": "git@github.com:oakfang/rmodule.git",
   "author": "Alon Niv <alon.n@seebo.com>",
   "license": "MIT",
-  "peerDependencies": {
-    "coven": "^0.3.1"
-  },
   "devDependencies": {
     "coven": "^0.3.1",
     "wrtc": "^0.0.62",
     "ws": "^3.2.0"
   },
   "dependencies": {
-    "uuid": "^3.1.0"
+    "uuid": "^3.1.0",
+    "coven": "^0.3.1"
   }
 }
